--- a/colorbars_source.html
+++ b/colorbars_source.html
@@ -20,8 +20,9 @@ body { font-family: monospace; color: #000000; background-color: #ffffff; }
 <pre>
 <span class="Comment">#!/usr/bin/env python</span>
 <span class="Comment">#</span>
-<span class="Comment"># Attempt to rebuild: <a href="http://applestooranges.com/blog/post/css-for-bar-graphs/">http://applestooranges.com/blog/post/css-for-bar-graphs/</a></span>
-<span class="Comment">#  Vertical CSS Rectangle Graph example</span>
+<span class="Comment"># # Colorbars</span>
+<span class="Comment"># </span>
+<span class="Comment"># A simple example showing colored bars.</span>
 <span class="PreProc">import</span> vp
 <span class="PreProc">import</span> sys
 
