--- a/nightingale_rose_source.html
+++ b/nightingale_rose_source.html
@@ -19,8 +19,10 @@ body { font-family: monospace; color: #000000; background-color: #ffffff; }
 <pre>
 <span class="Comment">#!/usr/bin/env python</span>
 <span class="Comment">#</span>
+<span class="Comment"># # Nightingales Rose</span>
+<span class="Comment"># </span>
 <span class="Comment"># This is an attempt to reproduce</span>
-<span class="Comment">#   <a href="http://vis.stanford.edu/protovis/ex/crimea-rose.html">http://vis.stanford.edu/protovis/ex/crimea-rose.html</a></span>
+<span class="Comment"># &lt;<a href="http://vis.stanford.edu/protovis/ex/crimea-rose.html">http://vis.stanford.edu/protovis/ex/crimea-rose.html</a>&gt;</span>
 <span class="PreProc">import</span> vp
 <span class="PreProc">import</span> sys
 
